# barManager

back/: .gitingore  CMakeLists.txt  command_handler.php  getFinancialData.php  init.sql
back/src/: DatabaseManager.cpp  DatabaseManager.h  User.cpp  User.h  config.txt  main.cpp
front/: App.js  Carousel.js  app.json  package-lock.json  package.json
front/components/: HandleItemComponent.js  HandleSortComponent.js  HandleTopComponent.js
front/view/: FinancialsScreen.js
front/views/: HandleEvaluationView.js  MyOrderView.js
servicesAPI/: requirements.txt
servicesAPI/run/: run.py  test_gpt_service.py
servicesAPI/services/: drink_detector.py  gpt_service.py  img_downloader.py  img_to_poster.py
